Fix description alignment

--- a/src/sections/Me/MeStyles.module.css
+++ b/src/sections/Me/MeStyles.module.css
@@ -69,6 +69,7 @@
 
 .description {
   max-width: 24ch;
+  align-self: center;
 }
 
 .info {
